kubernetes/workloads/prowlarr/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prowlarr
  labels:
    app: prowlarr
spec:
  replicas: 1
  revisionHistoryLimit: 1
  selector:
    matchLabels:
      app: prowlarr
  template:
    metadata:
      labels:
        app: prowlarr
    spec:
      containers:
        - name: prowlarr
          image: 'registry.gitlab.com/linuxserver.io/docker-prowlarr/prowlarr:2.5.2'
          ports:
            - containerPort: 9696
              protocol: TCP
              name: http
          volumeMounts:
            - name: config
              mountPath: /config
          resources:
            requests:
              cpu: "50m"
              memory: "100Mi"
            limits:
              cpu: "100m"
              memory: "250Mi"
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: prowlarr
