kubernetes/workloads/prowlarr/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prowlarr
  annotations:
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: traefik
  rules:
    - host: prowlarr.pynenborg.com
      http:
        paths:
          - backend:
              service:
                name: prowlarr
                port:
                  number: 80
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - prowlarr.pynenborg.com
      secretName: prowlarr-tls
